Use JPA - save links in H2 file database

--- a/.gitignore
+++ b/.gitignore
@@ -20,4 +20,8 @@ gradle-app.setting
 # JDT-specific (Eclipse Java Development Tools)
 .classpath
 
+# Builded executables
 **/bin
+
+# Database files
+**/*.db
