--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 spring.application.name=shortener
+spring.datasource.url=jdbc:h2:./redirections_db;DB_CLOSE_ON_EXIT=FALSE
+spring.jpa.generate-ddl=true
